--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,28 +31,28 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">34.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">35.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="8">com.Home.Associate_Login</td><td><a href="#m1"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1539327790845</td><td class="numi">713</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1539327791559</td><td class="numi">447</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1539327792007</td><td class="numi">488</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1539327792497</td><td class="numi">2506</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1539327795005</td><td class="numi">3521</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1539327798527</td><td class="numi">3594</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1539327802122</td><td class="numi">10088</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1539327812212</td><td class="numi">3560</td></tr>
+<tr><th colspan="4">Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="8">com.associatePortal.Associate_Login</td><td><a href="#m1"><b>TCBA01001</b>  </a></td><td class="numi">1</td><td>1539586868208</td><td class="numi">801</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01002</b>  </a></td><td class="numi">1</td><td>1539586869009</td><td class="numi">464</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01003</b>  </a></td><td class="numi">1</td><td>1539586869473</td><td class="numi">501</td></tr><tr class="passedodd"><td><a href="#m4"><b>TCBA01004</b>  </a></td><td class="numi">1</td><td>1539586869974</td><td class="numi">2513</td></tr><tr class="passedodd"><td><a href="#m5"><b>TCBA01005</b>  </a></td><td class="numi">1</td><td>1539586872487</td><td class="numi">3601</td></tr><tr class="passedodd"><td><a href="#m6"><b>TCBA01006</b>  </a></td><td class="numi">1</td><td>1539586876088</td><td class="numi">3530</td></tr><tr class="passedodd"><td><a href="#m7"><b>TCBA01007</b>  </a></td><td class="numi">1</td><td>1539586879618</td><td class="numi">10226</td></tr><tr class="passedodd"><td><a href="#m8"><b>TCBA01008</b>  </a></td><td class="numi">1</td><td>1539586889844</td><td class="numi">3957</td></tr>
 </table>
-<h1>Default test</h1>
-<h2 id="m1">com.Home.Associate_Login:TCBA01005</h2>
+<h1>Test</h1>
+<h2 id="m1">com.associatePortal.Associate_Login:TCBA01004</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.Home.Associate_Login:TCBA01006</h2>
+<h2 id="m2">com.associatePortal.Associate_Login:TCBA01008</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.Home.Associate_Login:TCBA01001</h2>
+<h2 id="m3">com.associatePortal.Associate_Login:TCBA01001</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">com.Home.Associate_Login:TCBA01002</h2>
+<h2 id="m4">com.associatePortal.Associate_Login:TCBA01006</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">com.Home.Associate_Login:TCBA01004</h2>
+<h2 id="m5">com.associatePortal.Associate_Login:TCBA01002</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">com.Home.Associate_Login:TCBA01007</h2>
+<h2 id="m6">com.associatePortal.Associate_Login:TCBA01003</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">com.Home.Associate_Login:TCBA01008</h2>
+<h2 id="m7">com.associatePortal.Associate_Login:TCBA01007</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">com.Home.Associate_Login:TCBA01003</h2>
+<h2 id="m8">com.associatePortal.Associate_Login:TCBA01005</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
