--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01101</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01102</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01103</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/10 17:34:29</td>   <td>-244</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01001</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:09</td>   <td>801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01002</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:09</td>   <td>1265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01003</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:09</td>   <td>1766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01004</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:12</td>   <td>4279</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01005</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:16</td>   <td>7880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01006</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:19</td>   <td>11410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01007</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>18/10/15 12:31:29</td>   <td>21636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">TCBA01008</td> 
+  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>18/10/15 12:30:58</td>   <td>-10134</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>18/10/15 12:31:33</td>   <td>25593</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.associatePortal.Associate_Login@13deb50e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@174573182</td>   <td></td> </tr>
 </table>
