--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaf0a4">  <td>18/10/12 12:33:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:10</td>   <td>9519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01001()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01001</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:11</td>   <td>10233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01002()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01002</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:12</td>   <td>10681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01003()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01003</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:12</td>   <td>11171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01004()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01004</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:15</td>   <td>13679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01005()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01005</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:18</td>   <td>17201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01006()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01006</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:22</td>   <td>20796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01007()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01007</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>18/10/12 12:33:32</td>   <td>30886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Login.TCBA01008()[pri:0, instance:com.Home.Associate_Login@25b2fe]">TCBA01008</td> 
-  <td>main@19597309</td>   <td></td> </tr>
-<tr bgcolor="aaf0a4">  <td>18/10/12 12:33:35</td>   <td>34448</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Login@25b2fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19597309</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/16 15:57:13</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@14ba872]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 15:57:38</td>   <td>25461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01101</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 15:57:42</td>   <td>29495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01102</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 15:58:05</td>   <td>51950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01103</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/16 15:58:07</td>   <td>54501</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@14ba872]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
 </table>
