--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01101</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01102</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>18/10/10 17:34:29</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">TCBA01103</td> 
-  <td>main@555826066</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>18/10/10 17:34:29</td>   <td>-244</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@f6c48ac]">&gt;&gt;setup1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@555826066</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 16:42:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01101()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01101</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 16:42:27</td>   <td>4032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01102()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01102</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="9b7d71">  <td>18/10/16 16:42:48</td>   <td>25141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Associate_Home.TCBA01103()[pri:0, instance:com.Home.Associate_Home@14ba872]">TCBA01103</td> 
+  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/16 16:42:08</td>   <td>-15135</td> <td>&nbsp;</td><td title="&gt;&gt;UtilityClass.setup1()[pri:0, instance:com.Home.Associate_Home@14ba872]">&gt;&gt;setup1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>18/10/16 16:42:51</td>   <td>27607</td> <td>&nbsp;</td><td title="&lt;&lt;UtilityClass.tearDown()[pri:0, instance:com.Home.Associate_Home@14ba872]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12565638</td>   <td></td> </tr>
 </table>
