--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,17 +31,27 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">42.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">36.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="3">com.Home.Associate_Home</td><td><a href="#m1"><b>TCBA01101</b>  </a></td><td class="numi">1</td><td>1539688343492</td><td class="numi">4031</td></tr><tr class="passedodd"><td><a href="#m2"><b>TCBA01102</b>  </a></td><td class="numi">1</td><td>1539688347524</td><td class="numi">21107</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01103</b>  </a></td><td class="numi">1</td><td>1539688368632</td><td class="numi">2463</td></tr>
+<tr><th colspan="4">Default test &#8212; failed</th></tr>
+<tr class="failedodd"><td rowspan="1">com.Home.Associate_Home</td><td><a href="#m1"><b>TCBA01102</b>  </a></td><td class="numi">1</td><td>1539692902134</td><td class="numi">16234</td></tr>
+<tr><th colspan="4">Default test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="2">com.Home.Associate_Home</td><td><a href="#m2"><b>TCBA01101</b>  </a></td><td class="numi">1</td><td>1539692898146</td><td class="numi">3987</td></tr><tr class="passedodd"><td><a href="#m3"><b>TCBA01103</b>  </a></td><td class="numi">1</td><td>1539692918372</td><td class="numi">2556</td></tr>
 </table>
-<h1>Test</h1>
-<h2 id="m1">com.Home.Associate_Home:TCBA01101</h2>
+<h1>Default test</h1>
+<h2 id="m1">com.Home.Associate_Home:TCBA01102</h2>
+<div style="padding-left:3em">
+<p> title My associate | 5-15 not found expected [true] but found [false]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertTrue(Assert.java:42)
+<br/>at com.Home.Associate_Home.TCBA01102(Associate_Home.java:128)
+<br/>25 lines not shown
+</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.Home.Associate_Home:TCBA01102</h2>
+<h2 id="m2">com.Home.Associate_Home:TCBA01101</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">com.Home.Associate_Home:TCBA01103</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
